[gd_scene load_steps=2 format=3 uid="uid://ukgom6ppj4mu"]

[ext_resource type="Script" uid="uid://b5xio6ffqsckx" path="res://scripts/killzone.gd" id="1_2nvww"]

[node name="Killzone" type="Area2D"]
collision_mask = 2
script = ExtResource("1_2nvww")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
